[package]
name = "trim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste =  { version = "1.0.6", optional = true }
rand = { version = "0.8.4", optional = true }
rand_pcg = { version = "0.3.1", optional = true }

[features]
bench = ["paste", "rand", "rand_pcg"]
